--- a/app/src/main/res/layout/fragment_a_i.xml
+++ b/app/src/main/res/layout/fragment_a_i.xml
@@ -132,7 +132,9 @@
             android:maxLines="4"
             android:padding="12dp"
             android:scrollbars="vertical"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:textColor="@color/black"
+            />
 
 
         <ImageButton
