--- a/app/src/main/res/layout/fragment_a_i.xml
+++ b/app/src/main/res/layout/fragment_a_i.xml
@@ -126,13 +126,16 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@drawable/edittext_background"
-            android:backgroundTint="#E9ECEF"
+            android:backgroundTint="#FFFFFF"
             android:hint="@string/type_a_message"
             android:inputType="textMultiLine"
             android:maxLines="4"
             android:padding="12dp"
             android:scrollbars="vertical"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:textColor="@color/black"
+            />
+
 
 
         <ImageButton
