In This Commite i made the design of the layout of search screen without the body , only the search bar and the 3 category button

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="card_dark_bg">#233D52</color>
+    <color name="search_icon_tint">#D9EAE8</color>
+    <color name="search_hint">#B7C1C3</color>
+    <color name="segment_selected_text">#00332A</color>
+    <color name="segment_unselected_text">#BFD6D8</color>
 </resources>
