--- a/app/src/main/res/layout/ingrediant_card_item_in_search_screen.xml
+++ b/app/src/main/res/layout/ingrediant_card_item_in_search_screen.xml
@@ -14,12 +14,12 @@
     android:clickable="true"
     android:focusable="true">
 
-
+    <!-- Constrain internal content size (you can change width as needed in RecyclerView item) -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="200dp">
 
-
+        <!-- Image area (top) -->
         <FrameLayout
             android:id="@+id/image_frame"
             android:layout_width="0dp"
@@ -29,25 +29,24 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/info_bar">
 
-
-            <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/Country_image_view"
+            <ImageView
+                android:id="@+id/meal_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
-                android:src="@drawable/egyptian"
+                android:src="@drawable/beef_image"
+                android:adjustViewBounds="true"
                 android:clipToOutline="true"
                 android:background="@drawable/top_rounded_mask" />
 
 
         </FrameLayout>
 
-
+        <!-- Bottom info bar -->
         <LinearLayout
             android:id="@+id/info_bar"
             android:layout_width="0dp"
-            android:layout_height="55dp"
+            android:layout_height="72dp"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -58,12 +57,21 @@
             android:paddingTop="8dp"
             android:paddingBottom="10dp">
 
+            <TextView
+                android:id="@+id/tv_category"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="BEEF"
+                android:textAllCaps="true"
+                android:textSize="11sp"
+                android:textStyle="bold"
+                android:textColor="@color/accent_neon" />
 
             <TextView
-                android:id="@+id/Country_name"
+                android:id="@+id/tv_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Egypt"
+                android:text="Grilled Steak"
                 android:textSize="16sp"
                 android:textColor="@color/white"
                 android:textStyle="bold"
