here i have finished the meals filtration screen

--- a/app/src/main/res/layout/ingrediant_card_item_in_search_screen.xml
+++ b/app/src/main/res/layout/ingrediant_card_item_in_search_screen.xml
@@ -17,7 +17,9 @@
     <!-- Constrain internal content size (you can change width as needed in RecyclerView item) -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp">
+        android:layout_height="200dp"
+        android:id="@+id/Ingrediants_card_id"
+        >
 
         <!-- Image area (top) -->
         <FrameLayout
