--- a/app/src/main/res/layout/category_item_card_in_searchscreen.xml
+++ b/app/src/main/res/layout/category_item_card_in_searchscreen.xml
@@ -16,7 +16,9 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp">
+        android:layout_height="200dp"
+        android:id="@+id/Recycler_View_Item"
+        >
 
         <FrameLayout
             android:id="@+id/image_frame"
