--- a/app/src/main/res/layout/country_card_item_in_scearch_screen.xml
+++ b/app/src/main/res/layout/country_card_item_in_scearch_screen.xml
@@ -17,7 +17,9 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp">
+        android:layout_height="200dp"
+        android:id="@+id/Country_Card_id"
+        >
 
 
         <FrameLayout
