--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,5 +21,63 @@
     <color name="purple_circle">#6C4BB3</color>
 
 
+    <color name="bg_gradient_start">#072025</color>
+    <color name="bg_gradient_mid">#0E3B3A</color>
+    <color name="bg_gradient_end">#134F4E</color>
+
+
+    <color name="surface_dark">#123D43</color>
+    <color name="card_bg_elevated">#193f47</color>
+
+    <!-- Accent colors -->
+    <color name="accent_green">#11D6A0</color>
+    <color name="accent_green_dark">#0FB28A</color>
+    <color name="accent_purple">#B051E6</color>
+    <color name="badge_green">#1EA07E</color>
+
+    <!-- Text colors -->
+    <color name="text_primary">#FFFFFF</color>
+    <color name="text_secondary">#B8D6D2</color>
+    <color name="text_muted">#9DB1AE</color>
+
+    <color name="white_60">#99FFFFFF</color>
+    <color name="white_30">#4DFFFFFF</color>
+    <color name="divider">#15363A</color>
+
+
+    <color name="ingredient_card">#0F3940</color>
+
+
+    <color name="play_overlay">#1E3E3D</color>
+
+
+    <color name="danger">#FF5C5C</color>
+
+
+
+    <color name="card_blue_dark">#163a45</color>
+    <color name="card_blue">#1f3944</color>
+    <color name="card_blue_light">#25444e</color>
+
+    <color name="pill_green">#1EA07E</color>
+    <color name="pill_green_dark">#0F7E61</color>
+
+    <color name="fav_purple">#A94BD6</color>
+    <color name="fav_purple_dark">#8A37C6</color>
+    <color name="fav_pink_selected">#FF6B97</color>
+    <color name="fav_selected_border">#FFFFFF</color>
+
+
+    <color name="button_dark_top">#17353C</color>
+    <color name="button_dark_bottom">#0F3440</color>
+    <color name="button_stroke">#22393F</color>
+
+    <color name="card_dark_blue">#0F2E3A</color>
+
+
+
+
 
 </resources>
+
+
