here i have endded the search by name , and i made an edit at navigation botton bar

--- a/app/src/main/res/layout/fragment_details__meal_.xml
+++ b/app/src/main/res/layout/fragment_details__meal_.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root_scroll"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -346,20 +347,34 @@
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
-            <androidx.cardview.widget.CardView
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:layout_marginTop="12dp"
-                app:cardCornerRadius="12dp"
-                app:cardElevation="4dp">
+                android:layout_height="wrap_content"
+                android:padding="12dp">
 
-                <WebView
-                    android:id="@+id/webView"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/card_video"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    app:cardCornerRadius="12dp"
+                    app:cardElevation="4dp"
 
-            </androidx.cardview.widget.CardView>
+                    app:layout_constraintDimensionRatio="20:15"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
 
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <WebView
+                        android:id="@+id/webView"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+                </androidx.cardview.widget.CardView>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
 
             <TextView
@@ -408,7 +423,7 @@
                             android:layout_height="wrap_content"
                             android:text="Ask AI about this meal"
                             android:textColor="@color/text_primary"
-                            android:textSize="18sp"
+                            android:textSize="17sp"
                             android:textStyle="bold" />
 
                         <TextView
@@ -426,12 +441,10 @@
                         android:layout_height="match_parent">
 
 
-
-
                         <androidx.appcompat.widget.AppCompatButton
                             android:id="@+id/btn_ask_bot"
                             android:layout_width="match_parent"
-                            android:layout_height="48dp"
+                            android:layout_height="wrap_content"
                             android:layout_marginTop="14dp"
                             android:background="@drawable/fav_next_step_button"
                             android:gravity="center"
