--- a/app/src/main/res/drawable/chat_background.xml
+++ b/app/src/main/res/drawable/chat_background.xml
@@ -2,12 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <!-- Dark blue to teal gradient matching the chat background -->
-    <gradient
-        android:startColor="#1C2A3A"
-        android:centerColor="#233D52"
-        android:endColor="#2B5D62"
-        android:angle="180"
-        android:type="linear"/>
+    <solid android:color="#0C1A2A" />
 
 </shape>
+
+
