--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,9 +12,7 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/bottom_navigation"/>
-
-
+        android:layout_above="@+id/bottom_navigation" />
 
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -23,10 +21,17 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="@drawable/bottom_navigation_design"
+
         app:menu="@menu/bottom_navigation_menu"
+
+        app:itemBackground="@android:color/transparent"
+        app:itemRippleColor="@android:color/transparent"
+        app:itemActiveIndicatorStyle="@null"
+
         app:itemIconTint="@null"
         app:itemTextColor="@color/white"
         app:labelVisibilityMode="labeled" />
+
 
 
 
