--- a/app/src/main/res/layout/fragment_filtered__meals.xml
+++ b/app/src/main/res/layout/fragment_filtered__meals.xml
@@ -5,7 +5,7 @@
     android:id="@+id/root_coordinator"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/card_dark_bg">
+    android:background="@drawable/chat_background">
 
 
 
