--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -3,19 +3,19 @@
 
 
     <item android:id="@+id/nav_home"
-        android:icon="@drawable/home"
+        android:icon="@drawable/ic_home_selected"
         android:title="@string/home_item"/>
 
     <item android:id="@+id/nav_search"
-        android:icon="@drawable/search"
+        android:icon="@drawable/ic_bn_search"
         android:title="@string/search_item"/>
 
     <item android:id="@+id/nav_calender"
-        android:icon="@drawable/calendar"
+        android:icon="@drawable/ic_bn_calendar"
         android:title="@string/calender_item"/>
 
     <item android:id="@+id/nav_ai"
-        android:icon="@drawable/ai"
-        android:title="@string/ai_assistant_item"/>
+        android:icon="@drawable/ic_bn_fav"
+        android:title="@string/favorite"/>
 
 </menu>
