in this commit 1-make the default of the button (add to your plan ) : disenable  2-make the background of the cards in catefory screen and ingredients screen is white 3-make the default of counter of the meals of the week is 0

--- a/app/src/main/res/layout/category_item_card_in_searchscreen.xml
+++ b/app/src/main/res/layout/category_item_card_in_searchscreen.xml
@@ -38,7 +38,7 @@
                 android:scaleType="centerCrop"
                 android:src="@drawable/beef_image"
                 android:clipToOutline="true"
-                android:background="@drawable/top_rounded_mask" />
+                android:background="@color/white" />
 
 
 
