--- a/app/src/main/res/layout/ingrediant_card_item_in_search_screen.xml
+++ b/app/src/main/res/layout/ingrediant_card_item_in_search_screen.xml
@@ -39,7 +39,7 @@
                 android:src="@drawable/beef_image"
                 android:adjustViewBounds="true"
                 android:clipToOutline="true"
-                android:background="@drawable/top_rounded_mask" />
+                android:background="@color/white" />
 
 
         </FrameLayout>
